source/stylesheets/_style.sass
$red: #ED1C24
$pink: #EB6D98
$jaggies: 40px
/* border-serrated - a zig zag triangle border with linear gradient */
=border-top-serrated($size, $color-outer)
  &
    position: relative
    overflow: auto
    padding-top: $size
  &:before
    top: 0px
    background-position: left top
    background: linear-gradient(-135deg, $color-outer $size / 2, transparent 0), linear-gradient(135deg, $color-outer $size / 2, transparent 0)
    +border-serrated-helper($size, $color-outer)
=border-bottom-serrated($size, $color-outer)
  &
    position: relative
    overflow: auto
    padding-bottom: $size
  &:after
    bottom: 0px
    background-position: left bottom
    background: linear-gradient(-45deg, $color-outer $size / 2, transparent 0), linear-gradient(45deg, $color-outer $size / 2, transparent 0)
    +border-serrated-helper($size, $color-outer)
=border-serrated-helper($size, $color-outer)
  content: " "
  display: block
  position: absolute
  left: 0px
  width: 100%
  height: $size
  background-repeat: repeat-x
  background-size: $size $size

// Matching font from LGBT history month website
h1, h2, h3, h4, h5
  text-transform: uppercase
  font-weight: bold
  color: $pink

=underline-section
  border-width: 0 0 1px 0
  border-color: #ccc
  border-style: solid

// All pink sections -- inverted
section.pink
  background-color: $pink
  h1, h2, h3, h4, h5
    color: white
  a, a:visited, a:link
    color: black
    text-decoration: underline
  a:hover
    color: white
  a.button
    background-color: white
    color: black
    text-decoration: none
    &:hover
      background-color: scale-color(white, $lightness: -14%)
      color: black

// Buttons
.button h3
  color: white

// Branding
section#branding
  padding: 2.5em 0 2.25em 0
  @media #{$small-only}
    padding: 5em 0 2.25em
  text-align: center
  background-color: $pink
section#date
  background-color: black
  text-transform: uppercase
  text-align: center
  letter-spacing: 0.1rem
  @media #{$small-only}
    letter-spacing: 0rem
    font-size: 80%
  h5
    color: $pink
    font-weight: normal
    font-size: 110%
    padding: 0.3em 0
    margin: 0.35em 0

// Navigation
nav
  margin-top: 1em
  li
    list-style-type: none
    display: inline-block
    padding: 0.5em 1em
    background: white
    background: linear-gradient(135deg, transparent 6px, white 0) top left, linear-gradient(225deg, transparent 6px, white 0) top right, linear-gradient(315deg, transparent 6px, white 0) bottom right, linear-gradient(45deg,  transparent 10px, white 0) bottom left
    background-size: 50% 50%
    background-repeat: no-repeat
    background-image: radial-gradient(circle at 0 0, transparent 8px, white 8px), radial-gradient(circle at 100% 0, transparent 8px, white 8px), radial-gradient(circle at 100% 100%, transparent 8px, white 8px), radial-gradient(circle at 0 100%, transparent 8px, white 8px)
    a
      text-transform: uppercase
      padding: 0.25em
      color: black
      text-decoration: none
      font-size: 130%

// Padding on copy sections
section#main section
  padding-top: 2em
  padding-bottom: 1em

// Hero
section#hero
  padding: 0 !important
  background-position: center center
  .row h3, .row p
    background-color: rgba(255,255,255,0.8)
    padding: 0.5em 1em
    display: inline-block
  ul.orbit-slides-container
    padding: 5em 0
    @media #{$small-only}
      padding: 0
  li.slide
    padding: 5em 0
    @media #{$small-only}
      padding: 2em 0
    h3
      font-size: 175%
      @media #{$small-only}
        font-size: 150%
    .row p
      font-size: 125%
      @media #{$small-only}
        font-size: 100%
  .intro
    background: url('/images/hero/canal-st.jpg')
  .who
    background: url('/images/hero/press-for-change.jpg')
  .contribute
    background: url('/images/hero/badges-long.jpg')      
  @media #{$small-only}
    .intro
      background: url('/images/hero/canal-st-mobile.jpg')
    .who
      background: url('/images/hero/press-for-change-mobile.jpg')
    .contribute
      background: url('/images/hero/badges-mobile.jpg') 

  div.orbit-bullets-container
    height: 0
    @media #{$medium-only}
      text-align: right
      margin-right: 1em
    @media #{$small-only}
      display: none
  div.orbit-caption 
    @media #{$small-only}
      display: none
    a
      color: black
  ol.orbit-bullets
    display: inline
    margin: 0
    top: -30px

.latest-blog 
  h3 a
    color: $pink
    text-decoration: none
  h5
    color: $body-font-color 

// Schedule colours
$main-festival: #9a9cff
$conference: #fad165
$theatre: #92e1c0
$films: #7bd148
$family-space: #fa573c
ul.schedule
  clear: left
  li
    display: inline-block
    list-style-type: none
    border: 1px solid #bbb
    padding: .25em .5em
    margin: 0 .5em .5em 0
    &.main-festival
      background-color: $main-festival
    &.conference
      background-color: $conference
    &.family-space
      background-color: $family-space
    &.films
      background-color: $films
    &.theatre
      background-color: $theatre
    &.disabled
      background-color: transparent
  h3.time
    float: left
    width: 55px
    font-size: 12px
  .timeblock
    margin-left: 65px
    padding-left: 10px
    border-left: 1px solid #bbb

ul.key
  text-align: center
  li
    display: inline-block

// Films
span.details
  font-weight: 300
  font-size: 50%

// Blogs
article
  figure
    border: 1px solid #ccc
    padding: 5px
    display: inline-block
  figcaption
    font-style: italic
    text-align: center
    padding-top: 0.5em
  h3
    color: $body-font-color
    +underline-section
    padding: 0.25em 0 0.2em
    border-top-width: 1px
  .meta 
    h3
      text-align: center
    p
      font-size: 90%
      font-style: italic
      color: #555
    p.photo
      text-align: center
    img
      border: 1px solid #ccc
      padding: 2px
  .resources li
    list-style-type: none
  .social-likes
    margin: auto 0    
    min-height: 0
  @media #{$large-up}
    .responsive-author
      display: none


article.teaser
  .hero
    height: 200px
    padding: 5px
  h2
    font-size: 250%
    line-height: 125%
    padding: 0.2em 0 0 0
    a
      text-decoration: none
  h3
    font-size: 120%
    color: $pink
  .meta
    +underline-section
    border-width: 1px 0 1px 
  .meta
    padding-bottom: 4px
  .para0
    font-size: 120%
  .para1
    color: #444
    font-size: 110%
  .para2
    color: #666
  .social-likes__widget
    margin: 0

// Footer

section#footer
  padding: 3em 0 2em
  background-color: black
  text-transform: uppercase
  color: white
  h6
    color: white
  .lgbthm
    font-size: 120%
  p
    font-size: 70%
  ul
    margin: 0
  li
    text-align: center
    list-style-type: none
    display: inline-block
    margin-right: 2em
    margin: 0 0 1em 0
    padding: 0
  hr
    border-color: $pink
    border-width: 1px
    border-style: solid
    margin: 3em 0
  .partners li
    a
      line-height: 150px

section#credits
  padding-top: 1em
  color: white
  text-align: center
  p
    font-size: 90%
  a
    color: white

form#contribute 
  .error
    background-color: $red
    color: white
    font-style: italic

// Venues

.vcard
  border: 0
  margin: 0
  padding: 0
  span
    display: block

// Slides

#topborder
  +border-top-serrated($jaggies, $pink)

body.index section#main
  p
    font-size: 130%
  h2, h3
    background-repeat: no-repeat
    background-size: contain
    background-position: 50% 0
  .arrow
    margin: 0 auto 2em
    width: 39px
    height: 50px
  .whitearrow
    background-image: url("/images/icons/whitearrow.png") 
  .pinkarrow
    background-image: url("/images/icons/pinkarrow.png")
  section#slide-1
    background-image: url("/images/home/canalst.jpg")
    background-attachment: fixed
    background-color: transparent
    text-align: center
    padding-top: 0
    .row
      top: 0
      margin-top: -$jaggies
    h1
      background-image: url('/images/home/fancyborder.png')
      background-repeat: no-repeat
      background-size: contain
      color: white
      min-height: 310px
      font-size: 36px
      margin: 3em 30px
      padding: 50px
      top: 4em
      text-align: center
  #slide-2
    margin-top: 3em
    h3
      font-size: 150%
    p
      font-size: 130%
  #slide-3
    background-attachment: fixed
    background-image: url("/images/home/badges.jpg")
    background-color: transparent
    text-align: center
    padding-top: 0
    .border
      +border-top-serrated($jaggies, white)
    .small-12 .content
      margin: 4em 0
      color: white
      p
        font-size: 150%
        background: rgba(0,0,0,0.5)
        padding: 0.5em
        a
          color: white
  #slide-4
    padding-bottom: 2em
    +border-bottom-serrated($jaggies, white)
    p
      color: white
    img
      margin: 1em 0
    a
      color: white
      text-decoration: none
    h3
      background-image: url('/images/icons/chevronborder.png')
      padding: 8px 0
  #slide-5
    margin-top: 2em
    .row > div
      margin: 3em 0 
    h2
      background-image: url('/images/icons/longborder.png')
      min-height: 80px
      padding: 13px 0
    h3
      background-image: url('/images/icons/scallopedborder.png')
      color: white
    .sat-image, .sun-image
      background-attachment: fixed
      background-repeat: none
      background-size: cover
      height: 18em
    .sat-image
      background-image: url("/images/home/library.jpg")
    .sun-image
      background-image: url("/images/home/phm.jpg")

